fixes broken down-migration
Signed-off-by: Marco Otte-Witte <marco.otte-witte@simplabs.com>

--- a/generators/reports_as_sparkline_migration/templates/migration.erb
+++ b/generators/reports_as_sparkline_migration/templates/migration.erb
@@ -28,8 +28,8 @@ class <%= class_name %> < ActiveRecord::Migration
   end
 
   def self.down
-    remove_index :name_model_grouping_agregation
-    remove_index :name_model_grouping_aggregation_period
+    remove_index :report_caches, :name => :name_model_grouping_agregation
+    remove_index :report_caches, :name => :name_model_grouping_aggregation_period
 
     drop_table :report_caches
   end
